frontend/src/sections/AboutMe/AboutMe.module.css
@import "../../styles/variables.css";

.aboutMeSection {
  padding: var(--space-lg) var(--space-md);
  background-color: var(--color-background-body);
  color: var(--color-text-base);
  line-height: var(--line-height-body);
}

.container {
  max-width: 100%;
  margin: 0 auto;
  padding: 0 var(--space-md);
  box-shadow: var(--box-shadow-md);
  border-radius: var(--border-radius-xl);
  background-color: var(--color-background-component);
}

.subsection {
  margin-bottom: var(--space-xl);
  padding: var(--space-lg);
  border-bottom: 1px solid #eee;
}

.subsection:last-child {
  border-bottom: none;
}

.techStackContainer {
  display: flex;
  flex-direction: column;
  gap: var(--space-md);
}

.skillsGrid {
  display: flex;
  flex-wrap: wrap;
  gap: var(--space-sm);
}

.leftBar,
.experienceItem,
.educationItem {
  margin-bottom: var(--space-lg);
  border-left: 3px solid var(--color-primary);
  padding-left: var(--space-md);
}

.experienceItem:last-child,
.educationItem:last-child {
  margin-bottom: 0;
}

.experienceDuration,
.educationInstitution,
.educationYear {
  font-size: 0.95em;
  color: var(--color-text-muted);
  margin-bottom: var(--space-xs);
}

.experienceResponsibilities {
  list-style-type: disc;
  margin-left: 20px;
  padding-left: 0;
}

.experienceResponsibilities li {
  margin-bottom: var(--space-xs);
  font-size: 1em;
}

.certificationsList {
  list-style-type: square;
  margin-left: var(--space-md);
  padding-left: 0;
}

.certificationsList li {
  margin-bottom: var(--space-xs);
  font-size: 1em;
}

.callToAction {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 20px;
  padding: var(--space-xl) 0;
  flex-wrap: wrap;
}

.ctaButtons {
  display: flex;
  flex-direction: row;
  gap: var(--space-sm);
}

.experienceDetails {
  margin-top: var(--space-sm);
  display: flex;
  flex-direction: column;
  gap: var(--space-sm);
}

.experienceHighlights,
.experienceImpact {
  list-style-type: circle;
  margin-left: var(--space-md);
  padding-left: 0;
}

.experienceHighlights li,
.experienceImpact li {
  margin-bottom: var(--space-xs);
}

.experienceTechStack {
  display: flex;
  flex-wrap: wrap;
  gap: var(--space-sm);
  margin-top: var(--space-md);
}

/* Responsive Design Considerations  */
@media (max-width: 768px) {
  .sectionTitle {
    font-size: 2em;
  }
  .subsectionTitle {
    font-size: 1.5em;
  }

  .container {
    padding: 0 10px;
  }
}

@media (max-width: 768px) {
  .skillsGrid {
    justify-content: center; /* Center the skill pills */
  }

  .aboutMeSection {
    padding: var(--space-md) var(--space-sm);
  }
}

